--- a/app/blog.html
+++ b/app/blog.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/style.min.css" />
   </head>
   <body>
-   <header class="header">
+    <header class="header">
       <div class="container">
         <div class="header__inner">
           <a class="logo" href="#">
@@ -76,23 +76,20 @@
     </header>
 
     <main class="main">
-        <section class="top">
-        <div class="top__container" style="background-image: url('../images/top-bg.jpg');">
+      <section class="top">
+        <div
+          class="top__container"
+          style="background-image: url('../images/top-bg.jpg')"
+        >
           <div class="container">
-            <h2 class="top__title title">
-              LOG IN
-            </h2>
+            <h2 class="top__title title">LOG IN</h2>
             <div class="breadcrumbs">
               <ul class="breadcrumbs__list">
                 <li class="breadcrumbs__item">
-                  <a class="breadcrumbs__link" href="#">
-                    Home
-                  </a>
+                  <a class="breadcrumbs__link" href="#"> Home </a>
                 </li>
                 <li class="breadcrumbs__item">
-                  <a class="breadcrumbs__link" href="#">
-                    Log in
-                  </a>
+                  <a class="breadcrumbs__link" href="#"> Log in </a>
                 </li>
               </ul>
             </div>
@@ -291,9 +288,7 @@
                 </div>
               </div>
               <div class="latest-post">
-                <h3 class="latest-post__title filter__title">
-                  Latest Post
-                </h3>
+                <h3 class="latest-post__title filter__title">Latest Post</h3>
                 <div class="latest-post__item">
                   <img
                     class="latest-post__img"
@@ -566,7 +561,9 @@
             </ul>
           </div>
           <div class="footer-top__item footer-top__nav">
-            <h6 class="footer-top__title footer-top__title-slide">Useful Links</h6>
+            <h6 class="footer-top__title footer-top__title-slide">
+              Useful Links
+            </h6>
             <ul class="footer-top__list">
               <li class="footer-top__item">
                 <a class="footer-top__link" href="#"> About Us </a>
@@ -586,7 +583,9 @@
             </ul>
           </div>
           <div class="footer-top__item footer-top__nav">
-            <h6 class="footer-top__title footer-top__title-slide">My Account</h6>
+            <h6 class="footer-top__title footer-top__title-slide">
+              My Account
+            </h6>
             <ul class="footer-top__list">
               <li class="footer-top__item">
                 <a class="footer-top__link" href="#"> My Account </a>
@@ -606,7 +605,7 @@
             </ul>
           </div>
           <div class="footer-top__item footer-top__item-form">
-            <h6 class="footer-top__title ">Subscribe Our Newsletter</h6>
+            <h6 class="footer-top__title">Subscribe Our Newsletter</h6>
             <p class="footer-top__text">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis
@@ -650,7 +649,6 @@
         </div>
       </div>
     </footer>
-
 
     <script src="js/main.min.js"></script>
   </body>
