--- a/app/contacts.html
+++ b/app/contacts.html
@@ -76,23 +76,20 @@
     </header>
 
     <main class="main">
-        <section class="top">
-        <div class="top__container" style="background-image: url('../images/top-bg.jpg');">
+      <section class="top">
+        <div
+          class="top__container"
+          style="background-image: url('../images/top-bg.jpg')"
+        >
           <div class="container">
-            <h2 class="top__title title">
-              LOG IN
-            </h2>
+            <h2 class="top__title title">LOG IN</h2>
             <div class="breadcrumbs">
               <ul class="breadcrumbs__list">
                 <li class="breadcrumbs__item">
-                  <a class="breadcrumbs__link" href="#">
-                    Home
-                  </a>
+                  <a class="breadcrumbs__link" href="#"> Home </a>
                 </li>
                 <li class="breadcrumbs__item">
-                  <a class="breadcrumbs__link" href="#">
-                    Log in
-                  </a>
+                  <a class="breadcrumbs__link" href="#"> Log in </a>
                 </li>
               </ul>
             </div>
@@ -119,28 +116,53 @@
               </p>
               <ul class="contact__info-list">
                 <li class="contact__info-item">
-                  <a class="contact__info-tel" href="tel:+01234567896">+0-123-456-7896</a>
-                  <a class="contact__info-tel" href="tel:+01234567896">+0-123-456-7896</a>
+                  <a class="contact__info-tel" href="tel:+01234567896"
+                    >+0-123-456-7896</a
+                  >
+                  <a class="contact__info-tel" href="tel:+01234567896"
+                    >+0-123-456-7896</a
+                  >
                 </li>
                 <li class="contact__info-item contact__info-item--adress">
-                  <span class="contact__info-adress">Ranlon Market 789 Road, Market Street, Newyork</span>      
+                  <span class="contact__info-adress"
+                    >Ranlon Market 789 Road, Market Street, Newyork</span
+                  >
                 </li>
                 <li class="contact__info-item contact__info-item--email">
-                  <span class="contact__info-email">yourmailaddress@gmail.com</span>
+                  <span class="contact__info-email"
+                    >yourmailaddress@gmail.com</span
+                  >
                   <span class="contact__info-email">companymail@gmail.com</span>
                 </li>
               </ul>
             </div>
             <form class="contact__form" action="#">
-              <p class="contact__form-title">Contact Form</p> 
+              <p class="contact__form-title">Contact Form</p>
               <div class="contact__form-box">
-                <input class="contact__form-input" type="text" placeholder="Your Name">
-                <input class="contact__form-input" type="text" placeholder="Your E-mail Address">
+                <input
+                  class="contact__form-input"
+                  type="text"
+                  placeholder="Your Name"
+                />
+                <input
+                  class="contact__form-input"
+                  type="text"
+                  placeholder="Your E-mail Address"
+                />
               </div>
-              <input class="contact__form-input" type="text" placeholder="Subject">
-              
-              <textarea class="contact__form-textarea" placeholder="Message here" ></textarea>
-              <button class="contact__form-btn" type="submit">SEND MESSAGE</button>
+              <input
+                class="contact__form-input"
+                type="text"
+                placeholder="Subject"
+              />
+
+              <textarea
+                class="contact__form-textarea"
+                placeholder="Message here"
+              ></textarea>
+              <button class="contact__form-btn" type="submit">
+                SEND MESSAGE
+              </button>
             </form>
           </div>
         </div>
@@ -257,7 +279,9 @@
             </ul>
           </div>
           <div class="footer-top__item footer-top__nav">
-            <h6 class="footer-top__title footer-top__title-slide">Useful Links</h6>
+            <h6 class="footer-top__title footer-top__title-slide">
+              Useful Links
+            </h6>
             <ul class="footer-top__list">
               <li class="footer-top__item">
                 <a class="footer-top__link" href="#"> About Us </a>
@@ -277,7 +301,9 @@
             </ul>
           </div>
           <div class="footer-top__item footer-top__nav">
-            <h6 class="footer-top__title footer-top__title-slide">My Account</h6>
+            <h6 class="footer-top__title footer-top__title-slide">
+              My Account
+            </h6>
             <ul class="footer-top__list">
               <li class="footer-top__item">
                 <a class="footer-top__link" href="#"> My Account </a>
@@ -297,7 +323,7 @@
             </ul>
           </div>
           <div class="footer-top__item footer-top__item-form">
-            <h6 class="footer-top__title ">Subscribe Our Newsletter</h6>
+            <h6 class="footer-top__title">Subscribe Our Newsletter</h6>
             <p class="footer-top__text">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis
