--- a/app/module/_header/_header.html
+++ b/app/module/_header/_header.html
@@ -1,65 +1,63 @@
 <header class="header">
-      <div class="container">
-        <div class="header__inner">
-          <a class="logo" href="#">
-            <img class="logo__img" src="images/logo.png" alt="logo" />
-          </a>
-          <nav class="menu">
-            <button class="menu__btn">
-              <span></span>
-            </button>
-            <ul class="menu__list">
-              <li class="menu__list-item">
-                <a class="menu__list-link menu__list-link--active" href="#"
-                  >HOME</a
-                >
-              </li>
-              <li class="menu__list-item">
-                <a class="menu__list-link" href="#">SHOP</a>
-              </li>
-              <li class="menu__list-item">
-                <a class="menu__list-link" href="#">PAGE</a>
-              </li>
-              <li class="menu__list-item">
-                <a class="menu__list-link" href="#">BLOG</a>
-              </li>
-              <li class="menu__list-item">
-                <a class="menu__list-link" href="#">CONTACT</a>
-              </li>
-            </ul>
-          </nav>
-          <div class="user-nav">
-            <a class="user-nav__link" href="">
-              <img
-                class="user-nav__img"
-                src="images/icons/user.svg"
-                alt="user icon"
-              />
-            </a>
-            <a class="user-nav__link" href="">
-              <img
-                class="user-nav__img"
-                src="images/icons/search.png"
-                alt="search icon"
-              />
-            </a>
-            <a class="user-nav__link" href="">
-              <img
-                class="user-nav__img"
-                src="images/icons/heart.png"
-                alt="heart icon"
-              />
-              <span class="user-nav__num">3</span>
-            </a>
-            <a class="user-nav__link" href="">
-              <img
-                class="user-nav__img"
-                src="images/icons/cart.svg"
-                alt="cart icon"
-              />
-              <span class="user-nav__num">7</span>
-            </a>
-          </div>
-        </div>
+  <div class="container">
+    <div class="header__inner">
+      <a class="logo" href="#">
+        <img class="logo__img" src="images/logo.png" alt="logo" />
+      </a>
+      <nav class="menu">
+        <button class="menu__btn">
+          <span></span>
+        </button>
+        <ul class="menu__list">
+          <li class="menu__list-item">
+            <a class="menu__list-link menu__list-link--active" href="#">HOME</a>
+          </li>
+          <li class="menu__list-item">
+            <a class="menu__list-link" href="#">SHOP</a>
+          </li>
+          <li class="menu__list-item">
+            <a class="menu__list-link" href="#">PAGE</a>
+          </li>
+          <li class="menu__list-item">
+            <a class="menu__list-link" href="#">BLOG</a>
+          </li>
+          <li class="menu__list-item">
+            <a class="menu__list-link" href="#">CONTACT</a>
+          </li>
+        </ul>
+      </nav>
+      <div class="user-nav">
+        <a class="user-nav__link" href="">
+          <img
+            class="user-nav__img"
+            src="images/icons/user.svg"
+            alt="user icon"
+          />
+        </a>
+        <a class="user-nav__link" href="">
+          <img
+            class="user-nav__img"
+            src="images/icons/search.png"
+            alt="search icon"
+          />
+        </a>
+        <a class="user-nav__link" href="">
+          <img
+            class="user-nav__img"
+            src="images/icons/heart.png"
+            alt="heart icon"
+          />
+          <span class="user-nav__num">3</span>
+        </a>
+        <a class="user-nav__link" href="">
+          <img
+            class="user-nav__img"
+            src="images/icons/cart.svg"
+            alt="cart icon"
+          />
+          <span class="user-nav__num">7</span>
+        </a>
       </div>
-    </header>
+    </div>
+  </div>
+</header>
