added link to pages

--- a/app/module/_header/_header.html
+++ b/app/module/_header/_header.html
@@ -10,24 +10,24 @@
         </button>
         <ul class="menu__list">
           <li class="menu__list-item">
-            <a class="menu__list-link menu__list-link--active" href="#">HOME</a>
+            <a class="menu__list-link menu__list-link--active" href="index.html">HOME</a>
           </li>
           <li class="menu__list-item">
-            <a class="menu__list-link" href="#">SHOP</a>
+            <a class="menu__list-link" href="shop.html">SHOP</a>
           </li>
           <li class="menu__list-item">
-            <a class="menu__list-link" href="#">PAGE</a>
+            <a class="menu__list-link" href="login.html">Register</a>
           </li>
           <li class="menu__list-item">
-            <a class="menu__list-link" href="#">BLOG</a>
+            <a class="menu__list-link" href="blog.html">BLOG</a>
           </li>
           <li class="menu__list-item">
-            <a class="menu__list-link" href="#">CONTACT</a>
+            <a class="menu__list-link" href="contacts.html">CONTACT</a>
           </li>
         </ul>
       </nav>
       <div class="user-nav">
-        <a class="user-nav__link" href="">
+        <a class="user-nav__link" href="login.html">
           <img
             class="user-nav__img"
             src="images/icons/user.svg"
